Resource Resolver: refactor MapEntries - improve MapIterator test coverage